--- a/root/index.html
+++ b/root/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-  <link href="./css/main.css" rel="stylesheet"/>
+  <link href="./css/main.css" rel="stylesheet">
   
   </head>
   
